--- a/on_iki.ipynb
+++ b/on_iki.ipynb
@@ -5,7 +5,7 @@
    "id": "d23d58bf-c509-442c-b880-ba8105659f0d",
    "metadata": {},
    "source": [
-    "### Bir restoranın günlük gelirlerini etkileyen faktörler isimli bir veri seti üzerinde karar ağaçları modeli kuracağız."
+    "### Bir restoranın günlük gelirlerini etkileyen faktörler konulu bir veri seti üzerinde karar ağaçları modeli kuracağız."
    ]
   },
   {
